# AipAero

./: .dev.vars.example  .env.example  .eslintrc.mjs  .gitignore  .lighthouserc.cjs  .prettierignore  CLAUDE.md  Dockerfile  README.md  _shoot.mjs  cloudflare-env.d.ts  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next-sitemap.config.js  next.config.js  next.config.mjs  open-next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  start-database.sh  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
.github/: dependabot.yml
crawler/: generate_csv_at.php  generate_csv_nl.php
crawlers/: README.md  aip-crawler.service  aip-crawler.timer  aip-facts-import.service  aip-facts-import.timer  cache_warmer.py  health_collector.py  import_openaip_backfill.py  import_ourairports.py  main.py  notify-failure@.service  output_handler.py  pyproject.toml  sanitize.py  settings.py  utils.py
crawlers/crawlers/: airac.py  al.py  am.py  at.py  au.py  az.py  ba.py  be.py  belgium.py  bg.py  by.py  car_sam_nam.py  ch.py  crawler_base.py  cy.py  cz.py  de.py  de_hours.py  de_ocr.py  declared_distances.py  dk.py  dk_hours.py  ee.py  es.py  eurocontrol_base.py  fi.py  fr.py  ge.py  gr.py  hr.py  http_base.py  http_cache.py  http_eurocontrol_base.py  hu.py  ie.py  is_.py  it.py  kg.py  kz.py  lt.py  (+28 more)
crawlers/error_logs/: 20260110_104534_NL_page_source.html  20260110_104810_NL_page_source.html  20260110_105305_NL_page_source.html
crawlers/health/: __init__.py  alert.py  cloudflare.py  cloudflare_parse.py  coolify.py  coolify_parse.py  crawl_report.py  github.py  models.py  sentry.py  server.py  settings.py
crawlers/recon/: gen12-batch1.md  gen12-dk.md  gen12-es.md  gen12-latest.txt  gen12-lt.md  gen12-si.md  pdf-recon-batch1.md  pdf-recon-fi-is.md  pdf-recon-si.md  probe-dk-gr-20260713.md  probe-ie-bg.md  probe-si.md  probe-sk-lt.md  round4-unlocker-fi.md
crawlers/tasks/: _TEMPLATE.md  concurrency-followup.md  crawler_belgium_luxembourg.md  crawler_czech.md  crawler_denmark.md  crawler_france.md  crawler_greece.md  europe-expansion.md
crawlers/tests/: conftest.py  test_ad23_hours.py  test_airac.py  test_al.py  test_am.py  test_at.py  test_az.py  test_ba.py  test_be.py  test_bg.py  test_by.py  test_ch.py  test_cy.py  test_cz.py  test_de.py  test_de_hours.py  test_de_ocr.py  test_declared_distances.py  test_dk.py  test_dk_hours.py  test_ee.py  test_es.py  test_fi.py  test_fr.py  test_ge.py  test_gr.py  test_health_alert.py  test_health_cloudflare_parse.py  test_health_coolify_parse.py  test_health_crawl_report.py  test_health_server.py  test_hr.py  test_http_base.py  test_http_cache.py  test_http_eurocontrol_base.py  test_hu.py  test_ie.py  test_infopage_integrity.py  test_is.py  test_it.py  (+29 more)
dashboard/: Dockerfile  README.md  app.py  cloudflared-config.example.yml  requirements.txt  test_app.py
docs/: aip-hosting-rights.md  autorouter-api-concept.md  chart-pdf-plan.md  data-backfill-runbook.md  health-dashboard-concept.md  health-dashboard-setup.md  indexnow-concept.md  open-tasks.md  opennext-cloudflare-patches.md  operation-hours-concept.md  pilot-wishlist.md  pwa-offline-concept.md  trade-aero-crosslink-concept.md
drizzle/: 0000_parched_wasp.sql  0001_lonely_crusher_hogan.sql  0002_sloppy_wildside.sql  0003_tan_liz_osborn.sql  0004_unique_clint_barton.sql  0005_polite_clint_barton.sql  0006_first_oracle.sql  0007_lazy_lethal_legion.sql  0008_dusty_supernaut.sql  (+6 more)
e2e/: a11y.spec.ts  (+9 more)
(+415 files in other folders)
