[project]
name = "aip-aero-crawlers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.9.1",
    # Selenium + webdriver-manager are kept while AT/DE/FR/UK still use them.
    # Drop both once the migration to httpx + BeautifulSoup is complete.
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
