[project]
name = "aip-aero-crawlers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # Playwright is the JS-rendering fallback for client-rendered AIP sources
    # (DK/Naviair; future JS-viewer sources). It runs ONLY on the netcup host
    # / self-hosted runner, never on the Cloudflare Worker. Install the
    # browser separately: `uv run playwright install chromium` (--with-deps on
    # a fresh box). Importing a crawler never launches it (lazy import).
    "playwright>=1.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
