[project]
name = "aip-aero-crawlers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # PDF text extraction for AD 2.3 operation hours from PDF-only AIPs (ES/ENAIRE
    # files the AD 2.3 OPERATIONAL HOURS table in the full-document AD-2 PDF, not
    # the HTML landing page). Pure-Python, no system deps; imported lazily.
    "pypdf>=4.0.0",
    # Playwright is the JS-rendering fallback for client-rendered AIP sources
    # (DK/Naviair; future JS-viewer sources). It runs ONLY on the netcup host
    # / self-hosted runner, never on the Cloudflare Worker. Install the
    # browser separately: `uv run playwright install chromium` (--with-deps on
    # a fresh box). Importing a crawler never launches it (lazy import).
    "playwright>=1.48.0",
    # OCR for DFS (DE) AD-2 pages, which are served as base64 PNG page images
    # (no extractable text). Tesseract reads them into raw DISPLAY text only
    # (never a structured claim - a mis-OCR'd digit is a safety hazard). Needs
    # the system `tesseract-ocr` (+ `tesseract-ocr-deu`) binary on the runner;
    # both python bindings are imported lazily so a tesseract-less env still
    # imports the crawler.
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    # PDF page rasteriser for the pdf_text OCR fallback (image-only eAIP PDFs
    # with no text layer): renders pages to a bitmap that Tesseract then reads.
    # pypdfium2 is permissively licensed (Apache-2.0/BSD-3) and a pure manylinux
    # wheel with a bundled PDFium - no system dependency (unlike pdf2image, which
    # needs poppler) and no AGPL (unlike PyMuPDF). Imported lazily.
    "pypdfium2>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
